test/fixtures/error/06-object-union/input.ts
import mint from "mintz";

type U = { kind: "a" } | { kind: "b" };

export const x = mint<U>();
